[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/Jugador/Personaje Psicosis.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Jugador.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Jugador/Evelyn Walk.png" type="Texture" id=3]
[ext_resource path="res://Escenas/Variado/Inventary.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 21.8555, 43.6422 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 20, 1 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 20, 1 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 1, 50 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 1, 50 )

[node name="KinematicBody2D" type="KinematicBody2D" groups=[
"Player",
]]
position = Vector2( 441.395, 282.293 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 50.1033, 23.7348 )
scale = Vector2( 2.11947, 2.11947 )
frames = SubResource( 4 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 51.9813, 23.7464 )
shape = SubResource( 5 )

[node name="PopupMenu" parent="." instance=ExtResource( 4 )]

[node name="arriba" type="Area2D" parent="."]
position = Vector2( 50, -35 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="arriba"]
shape = SubResource( 6 )

[node name="abajo" type="Area2D" parent="."]
position = Vector2( 50, 70 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="abajo"]
shape = SubResource( 7 )

[node name="izquierda" type="Area2D" parent="."]
position = Vector2( 30, 25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="izquierda"]
shape = SubResource( 8 )

[node name="derecha" type="Area2D" parent="."]
position = Vector2( 50, -35 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="derecha"]
position = Vector2( 20, 60 )
shape = SubResource( 9 )
[connection signal="area_entered" from="arriba" to="." method="_on_arriba_area_entered"]
[connection signal="area_exited" from="arriba" to="." method="_on_arriba_area_exited"]
[connection signal="area_entered" from="abajo" to="." method="_on_abajo_area_entered"]
[connection signal="area_exited" from="abajo" to="." method="_on_abajo_area_exited"]
[connection signal="area_entered" from="izquierda" to="." method="_on_izquierda_area_entered"]
[connection signal="area_exited" from="izquierda" to="." method="_on_izquierda_area_exited"]
[connection signal="area_entered" from="derecha" to="." method="_on_derecha_area_entered"]
[connection signal="area_exited" from="derecha" to="." method="_on_derecha_area_exited"]
